# AEOS

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_CONSTITUTION.md  CHANGELOG.md  CLOUD_PLATFORM_BLUEPRINT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OSIP_BLUEPRINT.md  README.md  buf.gen.yaml  buf.yaml  docker-compose.cluster.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  infra-validate.yml  proto-governance.yml
aeos/: __init__.py
aeos/cli/: __init__.py  main.py  scaffold.py
aeos/sdk/: __init__.py  client.py  types.py  workflow.py
aeos/workflow/: __init__.py  compiler.py
app/: main.py
app/agents/: analyst_agent.py  base.py  cognitive.py  context.py  executor_agent.py  planner_agent.py  research_agent.py  reviewer_agent.py  simple_agent.py
app/api/: __init__.py  validation.py
app/certification/: __init__.py  environment.py  measurements.py  profiles.py  report.py  runner.py
app/core/: config.py  logger.py  memory.py  memory_v2.py  message_bus.py  orchestrator.py  ratelimit.py
app/distributed/: __init__.py
app/execution/: __init__.py  checkpoint.py  conditions.py  engine.py  events.py  executor.py  graph.py  metrics.py  node.py  planner.py  priority.py  replay.py  retry.py  schemas.py  stages.py  visualization.py  worker.py
app/github_analyzer/: __init__.py  fetcher.py  indexer.py  parser.py  summarizer.py
app/kernel/: __init__.py  event_bus.py  exceptions.py  health.py  kernel.py  lifecycle.py  plugin.py  policy_engine.py  resource_manager.py  scheduler.py  service_registry.py
app/ml_pipeline/: __init__.py  dataset.py  evaluator.py  registry.py  trainer.py
app/observability/: __init__.py  decision_tracer.py  distributed_timeline.py  runtime_graph.py
app/rag/: __init__.py  chunker.py  embedder.py  embeddings.py  exceptions.py  generator.py  ingestor.py  loader.py  pipeline.py  rag_engine.py  retriever.py  schemas.py  security.py  vector_store.py
app/runtime/: __init__.py  adaptive_resource_manager.py  adaptive_scheduler.py  coordinator.py  execution_memory.py  execution_monitor.py  lifecycle_controller.py  optimization_loop.py  pattern_miner.py  plugin_manager.py  policy_runtime.py  runtime_profiler.py  sdk.py  self_healing.py  telemetry_bus.py  (+1 more)
infra/: aws_notes.md
infrastructure/: README.md
ml_platform/: __init__.py
scripts/: benchmark.py  benchmark_transport.py  capture_apply_failures.py  certify.py  check_policy_coverage.py  cluster.sh  release.sh  validate.sh
software_intelligence/: __init__.py  exceptions.py  schemas.py
tests/: conftest.py
(+460 files in other folders)
