[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeos"
version = "0.1.0"
description = "AEOS — AI Engineering Orchestration System: production-grade distributed multi-agent runtime"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "ai", "agents", "orchestration", "distributed-systems",
    "multi-agent", "rag", "workflow", "ml-platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "anyio>=4.7",
    "httpx>=0.28",
    "typer[all]>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=3.3",
    "chromadb>=0.5",
    "tiktoken>=0.8",
    "pypdf>=5.0",
    "python-multipart>=0.0.18",
    "beautifulsoup4>=4.12",
]
ml = [
    "scikit-learn>=1.6",
    "joblib>=1.3",
    "numpy>=2.0",
    "pandas>=2.2",
]
distributed = [
    "aiokafka>=0.11",
    "redis>=5.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
]
observability = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "build>=1.0",
    "twine>=5.0",
]
all = [
    "aeos[rag,ml,distributed,observability,dev]",
]

[project.urls]
Homepage    = "https://github.com/your-org/aeos"
Repository  = "https://github.com/your-org/aeos"
Issues      = "https://github.com/your-org/aeos/issues"
Changelog   = "https://github.com/your-org/aeos/blob/main/CHANGELOG.md"

[project.scripts]
aeos = "aeos.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeos*", "app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
